# nhc-capital

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  audit_test.md  codex.md  pyproject.toml  pytest.ini  risk-policy.json  test_regression.py
.claude/commands/: build.md  commit.md  docs.md  fix.md
.github/: CODEOWNERS
.github/workflows/: auto-fix.yml  ci-dashboard.yml  ci-projects.yml  ci.yml  notify-nhc.yml  pr-review.yml  risk-policy-gate.yml
admin-dashboard/: .gitignore  CLAUDE.md  README.md  run.sh  test_smoke.py
admin-dashboard/backend/: auth.py  db.py  main.py  query.py  requirements.txt
admin-dashboard/frontend/: index.html  package-lock.json  (+2 more)
docs/: admin-dashboard.md  api-reference.md  blake-rainey-code-factory.md  changelog.md  ci-pipeline.md  coding-agents.md  how-computers-work.md  how-to-review.md  infrastructure.md  networking-security.md  nhl-betting.md  polymarket.md  pr-workflow.md  python-setup.md  real-estate.md  remediation.md  subagents.md
lib/: __init__.py  db.py  ingest.py  validate.py
nhl-betting/: CLAUDE.md  LEARNINGS.md  NHL_MODEL_AUDIT.md  PROVENSTRATEGIES.md  README.md  ROADMAP.md  requirements.txt  test_daily_picks.py  test_smoke.py
polymarket/: CLAUDE.md  README.md  requirements.txt  test_smoke.py
real-estate/: CLAUDE.md  README.md  requirements.txt  test_smoke.py
scripts/: auto-deploy-watcher.sh  ci-remediate  com.nhc.auto-deploy.plist  com.nhc.dashboard.plist  com.nhc.health-snapshot.plist  committer  dashboard-guard  db-etl  db-query  deploy-dashboard  docs-guard  docs-list  health-snapshot  llm_review.py  mr-discord-notify  mr-review  pg-safety-config.sql  pr-discord-notify  remediate  risk-classifier  schema-guard  schema-snapshot  setup-dashboard-user  setup-venvs
tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_daily_picks.py  test_db.py  test_goalie_strategy.py  test_ingest.py  test_mr_review.py  test_odds_pull.py  test_remediate.py  test_risk_classifier.py  test_schema_guard.py  test_validate.py
(+164 files in other folders)
