[project]
name = "nhc-capital"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = [
    ".",
    "tests",
    "nhl-betting",
    "real-estate",
    "polymarket",
    "admin-dashboard",
    "lib",
]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"nhl-betting/model/*.py" = ["E501"]
"real-estate/scripts/*.py" = ["E402", "E501"]
